--- a/home_assistant/manifest.json
+++ b/home_assistant/manifest.json
@@ -1,9 +1,10 @@
 {
   "domain": "mr_tree",
   "name": "Mr Tree",
-  "dependencies": [],
+  "documentation": "https://github.com/kristjan/mr_tree",
   "codeowners": ["@kristjan"],
+  "dependencies": [],
   "requirements": ["aiohttp"],
-  "iot_class": "local_polling",
-  "version": "0.1.0"
+  "version": "0.2.0",
+  "iot_class": "local_push"
 }
